--- a/styles/Chatbot.module.css
+++ b/styles/Chatbot.module.css
@@ -23,8 +23,8 @@
   font-size: 36px;
   color: #127234;
   font-weight: bold;
-  margin-bottom: 10px;
-  margin-top: 40px;
+  margin-bottom: 20px;
+  margin-top: 70px;
   text-align: center;
 }
 
@@ -108,18 +108,6 @@
   justify-content: center;
 }
 
-.benefitText h3 {
-  margin: 0 0 0.5rem 0;
-  font-size: 1.25rem;
-  font-weight: bold;
-  color: #127234;
-}
-
-.benefitText p {
-  margin: 0;
-  font-size: 0.95rem;
-}
-
 .infoSection {
   padding: 60px 0;
   background-color: #fff;
@@ -160,7 +148,7 @@
 .cardHeader h3 {
   color: white;
   font-size: 22px;
-  margin-bottom: 10px;
+  padding-top: 10px;
   font-weight: bold;
 }
 
@@ -181,7 +169,7 @@
 .cardHeader2 h3 {
   color: white;
   font-size: 22px;
-  margin-bottom: 10px;
+  padding-top: 10px;
   font-weight: bold;
 }
 
